Split up feature file changed maven file a bit